@@ -3,6 +3,24 @@ require File.expand_path(File.join(File.dirname(__FILE__), '..', "helper"))
 module Nokogiri
   module XML
     class TestBuilder < Nokogiri::TestCase
+      def test_nested_local_variable
+        @ivar     = 'hello'
+        local_var = 'hello world'
+        builder = Nokogiri::XML::Builder.new do |xml|
+          xml.root do
+            xml.foo local_var
+            xml.bar @ivar
+            xml.baz {
+              xml.text @ivar
+            }
+          end
+        end
+
+        assert_equal 'hello world', builder.doc.at('//root/foo').content
+        assert_equal 'hello', builder.doc.at('//root/bar').content
+        assert_equal 'hello', builder.doc.at('baz').content
+      end
+
       def test_cdata
         builder = Nokogiri::XML::Builder.new do
           root {
